--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,6 +19,7 @@ body {
   font-family: 'Mrs Eaves OT', 'Amethysta', sans-serif;
   margin: 0 auto;
   max-width: 1440px;
+  overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
