--- a/client/src/components/script/index.css
+++ b/client/src/components/script/index.css
@@ -5,11 +5,29 @@
 }
 
 .content {
-  border: 1px solid red;
-  opacity: 1;
+  background: #FFFFFF;
+  box-shadow: 0px 2px 6px 4px rgba(189, 170, 165, 0.1);
+  border-radius: 9px;
+  opacity: 0.5;
+  overflow-y: scroll;
   position: relative;
   top: 0;
   width: 50%;
+}
+
+.text {
+  font-family: Courier;
+  font-size: 13px;
+  line-height: 20px;
+  padding: 50px;
+}
+
+.section:not(:last-child) {
+  padding: 0 0 20px;
+}
+
+.item {
+  margin: 0;
 }
 
 .content-show {
@@ -23,7 +41,7 @@
     top: 200px;
   }
   100% {
-    opacity: 1;
+    opacity: 0.5;
     top: 0;
   }
 }
@@ -34,7 +52,7 @@
     top: 200px;
   }
   100% {
-    opacity: 1;
+    opacity: 0.5;
     top: 0;
   }
 }
