--- a/client/src/components/script/index.css
+++ b/client/src/components/script/index.css
@@ -8,6 +8,7 @@
   background: #FFFFFF;
   box-shadow: 0px 2px 6px 4px rgba(189, 170, 165, 0.1);
   border-radius: 9px;
+  display: flex;
   opacity: 0.5;
   overflow-y: scroll;
   position: relative;
@@ -16,6 +17,7 @@
 }
 
 .text {
+  flex: 1 1 auto;
   font-family: Courier;
   font-size: 13px;
   line-height: 20px;
